# finops-pptx

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DATA.md  Makefile  PHASE2.md  PRD-PHASE1.md  README.md  app.py  config.yaml  generate_report.py  main.py  prd.json  pyproject.toml  slides_config.yaml  test_table_styles.py
data/forecasts/: cogs-nov-2025-forecast.xlsx  opex-nov-2025-forecast.xlsx
data/mapping/: app_category_mapping.xlsx
docs/: data_contracts.md  qa_report.md  refactor_risks.md
pptx_template/: template1-index.yaml  template1.pptx
sql/: cylance_dbx_cost_center_monthly.sql  opex_costs.sql  v_pod_monthly_unit_costs.sql
src/: app_data.py  calculations.py  charts.py  forecast.py  ingestion.py  narrative.py  pptx_gen.py  pptx_utils.py
