[project]
name = "finops-report-generator"
version = "0.2.0"
description = "Automated monthly executive cloud cost presentation generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido==0.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
]
